# menttor

./: .env.example  .gitignore  Core principles to encode.txt  DEPLOYMENT.md  DEPLOYMENT_INSTRUCTIONS.md  Dockerfile.autogen  README.md  REALISTIC_SIMULATION_EXAMPLES.md  RENDER_DEPLOYMENT.md  SECURITY.md  VISITOR_ONBOARDING.md  auto_batch_generator.sh  auto_generator_service.py  backend_env_vars.yaml  collections-implementation-plan.md  create_practice_tables.sql  deploy-autogen.sh  deployment_checklist.md  docker-compose.yml  full_start_2.sh  gen-lang-client-0319118634-firebase-adminsdk-fbsvc-6a9d257e71.json  generate_roadmap_test.py  insert_production_data.py  package-lock.json  package.json  render.yaml  run_migration.md  test-seo-improvements.js  test_behavioral_integration.py  test_roadmap_generation.py  vercel-env-vars.txt
backend/app/: check_key.py  main.py  migration_endpoint.py  pyproject.toml  requirements.txt  schemas.py  sql_models.py  subtopic_generator.py  test_roadmap.py
backend/app/content/: neural-network-architectures.json
backend/app/core/: ai_service.py  auth.py  config.py  ml_service.py  supabase_client.py  websocket_manager.py
backend/app/database/: batch.py  cache.py  cleanup.py  cloud_sql.py  compression.py  monitor.py  redis_client.py  session.py
backend/app/prompts/: answer_evaluation.j2  feedback_generation.j2  learn.j2  learn_chunk.j2  learn_chunk_with_resources.j2  learn_outline.j2  learning_resources.j2  practice_case_study.j2  practice_code_completion.j2  practice_debugging.j2  practice_mcq.j2  practice_numerical.j2  quiz.j2  (+4 more)
(+330 files in other folders)
